crates/loadsmith-loader/tests/snapshots/fixtures__ReturnOfModding-ReturnOfModding@1.1.30.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
CHANGELOG.md: ~
README.md: ~
ReturnOfModdingPack/version.dll: "./version.dll"
icon.png: ~
manifest.json: ~
