crates/loadsmith-loader/tests/snapshots/fixtures__ReturnsAPI-ReturnsAPI@0.1.58.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
CHANGELOG.md: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/CHANGELOG.md
README.md: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/README.md
core/0_Internal/Internal.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/0_Internal/Internal.lua
core/0_Internal/Proxy.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/0_Internal/Proxy.lua
core/0_Internal/ReadOnly.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/0_Internal/ReadOnly.lua
core/0_Internal/Wrap.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/0_Internal/Wrap.lua
core/1_Util/Math.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/1_Util/Math.lua
core/1_Util/TOML.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/1_Util/TOML.lua
core/1_Util/Util.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/1_Util/Util.lua
core/1_Util/Vector.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/1_Util/Vector.lua
core/2_Data_Structures/Array.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/2_Data_Structures/Array.lua
core/2_Data_Structures/CallbackCache.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/2_Data_Structures/CallbackCache.lua
core/2_Data_Structures/FindCache.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/2_Data_Structures/FindCache.lua
core/2_Data_Structures/List.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/2_Data_Structures/List.lua
core/2_Data_Structures/Map.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/2_Data_Structures/Map.lua
core/2_Data_Structures/Struct.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/2_Data_Structures/Struct.lua
core/3_GM/GM.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/3_GM/GM.lua
core/3_GM/Global.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/3_GM/Global.lua
core/3_GM/Hook.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/3_GM/Hook.lua
core/3_GM/Script.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/3_GM/Script.lua
core/4_Callback/Callback.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/4_Callback/Callback.lua
core/4_Callback/Initialize.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/4_Callback/Initialize.lua
core/5_Mod_Options/ModOptions.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptions.lua
core/5_Mod_Options/ModOptionsButton.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptionsButton.lua
core/5_Mod_Options/ModOptionsCheckbox.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptionsCheckbox.lua
core/5_Mod_Options/ModOptionsDropdown.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptionsDropdown.lua
core/5_Mod_Options/ModOptionsKeybind.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptionsKeybind.lua
core/5_Mod_Options/ModOptionsSlider.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptionsSlider.lua
core/5_Mod_Options/ModOptionsTextField.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/5_Mod_Options/ModOptionsTextField.lua
core/6_General/ActorSkill.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/ActorSkill.lua
core/6_General/Alarm.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Alarm.lua
core/6_General/AttackFlag.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/AttackFlag.lua
core/6_General/AttackInfo.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/AttackInfo.lua
core/6_General/Buffer.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Buffer.lua
core/6_General/Class.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Class.lua
core/6_General/Color.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Color.lua
core/6_General/Console.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Console.lua
core/6_General/DamageCalculate.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/DamageCalculate.lua
core/6_General/DamageDodge.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/DamageDodge.lua
core/6_General/EffectDisplay.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/EffectDisplay.lua
core/6_General/HitInfo.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/HitInfo.lua
core/6_General/ItemTier.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/ItemTier.lua
core/6_General/Language.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Language.lua
core/6_General/LootPool.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/LootPool.lua
core/6_General/Net.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Net.lua
core/6_General/Packet.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Packet.lua
core/6_General/Particle.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Particle.lua
core/6_General/RecalculateStats.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/RecalculateStats.lua
core/6_General/Sound.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Sound.lua
core/6_General/Sprite.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Sprite.lua
core/6_General/Timer.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Timer.lua
core/6_General/Tracer.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/6_General/Tracer.lua
core/7_Content_Classes/Achievement.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Achievement.lua
core/7_Content_Classes/ActorSkin.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/ActorSkin.lua
core/7_Content_Classes/ActorState.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/ActorState.lua
core/7_Content_Classes/Artifact.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Artifact.lua
core/7_Content_Classes/Buff.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Buff.lua
core/7_Content_Classes/Difficulty.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Difficulty.lua
core/7_Content_Classes/Elite.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Elite.lua
core/7_Content_Classes/EndingType.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/EndingType.lua
core/7_Content_Classes/EnvironmentLog.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/EnvironmentLog.lua
core/7_Content_Classes/Equipment.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Equipment.lua
core/7_Content_Classes/GameMode.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/GameMode.lua
core/7_Content_Classes/InteractableCard.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/InteractableCard.lua
core/7_Content_Classes/Item.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Item.lua
core/7_Content_Classes/ItemLog.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/ItemLog.lua
core/7_Content_Classes/MonsterCard.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/MonsterCard.lua
core/7_Content_Classes/MonsterLog.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/MonsterLog.lua
core/7_Content_Classes/Skill.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Skill.lua
core/7_Content_Classes/Stage.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Stage.lua
core/7_Content_Classes/Survivor.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/Survivor.lua
core/7_Content_Classes/SurvivorLog.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/SurvivorLog.lua
core/7_Content_Classes/__Notes.md: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/__Notes.md
core/7_Content_Classes/__template.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/7_Content_Classes/__template.lua
core/8_Instances/Actor.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/8_Instances/Actor.lua
core/8_Instances/Instance.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/8_Instances/Instance.lua
core/8_Instances/Object.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/8_Instances/Object.lua
core/8_Instances/Player.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/8_Instances/Player.lua
core/9_Misc/actor_skin_skinnable_fix.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/actor_skin_skinnable_fix.lua
core/9_Misc/backdoor.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/backdoor.lua
core/9_Misc/commando_huntress_achievements.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/commando_huntress_achievements.lua
core/9_Misc/custom_object_sync_fix.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/custom_object_sync_fix.lua
core/9_Misc/debug_overlay.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/debug_overlay.lua
core/9_Misc/display_version_number.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/display_version_number.lua
core/9_Misc/force_stat_recalc_on_equipment_pickup.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/force_stat_recalc_on_equipment_pickup.lua
core/9_Misc/hud_draw_callback_fix.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/hud_draw_callback_fix.lua
core/9_Misc/mod_mp_flag_check.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/mod_mp_flag_check.lua
core/9_Misc/mp_lobby_diff_fix.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/mp_lobby_diff_fix.lua
core/9_Misc/object_is_ancestor_check.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/object_is_ancestor_check.lua
core/9_Misc/oil_far_fix.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/oil_far_fix.lua
core/9_Misc/palette_generator.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/palette_generator.lua
core/9_Misc/portrait_replacements.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/portrait_replacements.lua
core/9_Misc/sniper_crit_number_fix.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/sniper_crit_number_fix.lua
core/9_Misc/store_stage_variant.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/9_Misc/store_stage_variant.lua
core/Notes_for_contributing.md: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/Notes_for_contributing.md
core/data/class_array.txt: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/data/class_array.txt
core/data/class_name_mapping.txt: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/data/class_name_mapping.txt
core/sprites/loadout_palettes/acridPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/acridPaletteLoadout.png
core/sprites/loadout_palettes/artiPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/artiPaletteLoadout.png
core/sprites/loadout_palettes/banditPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/banditPaletteLoadout.png
core/sprites/loadout_palettes/chefPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/chefPaletteLoadout.png
core/sprites/loadout_palettes/commandoPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/commandoPaletteLoadout.png
core/sprites/loadout_palettes/drifterPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/drifterPaletteLoadout.png
core/sprites/loadout_palettes/enforcerPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/enforcerPaletteLoadout.png
core/sprites/loadout_palettes/engineerPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/engineerPaletteLoadout.png
core/sprites/loadout_palettes/handPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/handPaletteLoadout.png
core/sprites/loadout_palettes/huntressPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/huntressPaletteLoadout.png
core/sprites/loadout_palettes/loaderPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/loaderPaletteLoadout.png
core/sprites/loadout_palettes/mercenaryPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/mercenaryPaletteLoadout.png
core/sprites/loadout_palettes/minerPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/minerPaletteLoadout.png
core/sprites/loadout_palettes/pilotPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/pilotPaletteLoadout.png
core/sprites/loadout_palettes/robomandoPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/robomandoPaletteLoadout.png
core/sprites/loadout_palettes/sniperPaletteLoadout.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/loadout_palettes/sniperPaletteLoadout.png
core/sprites/palettes/pilotPalette.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/palettes/pilotPalette.png
core/sprites/portrait_palettes/acridPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/acridPalettePortrait.png
core/sprites/portrait_palettes/artiPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/artiPalettePortrait.png
core/sprites/portrait_palettes/banditPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/banditPalettePortrait.png
core/sprites/portrait_palettes/chefPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/chefPalettePortrait.png
core/sprites/portrait_palettes/commandoPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/commandoPalettePortrait.png
core/sprites/portrait_palettes/drifterPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/drifterPalettePortrait.png
core/sprites/portrait_palettes/enforcerPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/enforcerPalettePortrait.png
core/sprites/portrait_palettes/engineerPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/engineerPalettePortrait.png
core/sprites/portrait_palettes/handPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/handPalettePortrait.png
core/sprites/portrait_palettes/huntressPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/huntressPalettePortrait.png
core/sprites/portrait_palettes/loaderPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/loaderPalettePortrait.png
core/sprites/portrait_palettes/mercenaryPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/mercenaryPalettePortrait.png
core/sprites/portrait_palettes/minerPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/minerPalettePortrait.png
core/sprites/portrait_palettes/pilotPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/pilotPalettePortrait.png
core/sprites/portrait_palettes/robomandoPalettePortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_palettes/robomandoPalettePortrait.png
core/sprites/portrait_replacements/sHuntressPortrait.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_replacements/sHuntressPortrait.png
core/sprites/portrait_replacements/sHuntressPortraitSmall.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_replacements/sHuntressPortraitSmall.png
core/sprites/portrait_replacements/sSelectMiner.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/portrait_replacements/sSelectMiner.png
core/sprites/ui/sUIModOptionsButtonHeader.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/sprites/ui/sUIModOptionsButtonHeader.png
core/unused/Callback_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/Callback_OLD.lua
core/unused/DamageCalculate_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/DamageCalculate_OLD.lua
core/unused/Draw.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/Draw.lua
core/unused/Initialize_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/Initialize_OLD.lua
core/unused/ItemTier copy.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/ItemTier copy.lua
core/unused/ItemTier_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/ItemTier_OLD.lua
core/unused/LootPool_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/LootPool_OLD.lua
core/unused/ModOptionsKeybind.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/ModOptionsKeybind.lua
core/unused/Object_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/Object_OLD.lua
core/unused/RecalculateStats_OLD.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/RecalculateStats_OLD.lua
core/unused/RecalculateStats_OLD2.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/RecalculateStats_OLD2.lua
core/unused/profiler.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/profiler.lua
core/unused/profiler2.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/core/unused/profiler2.lua
envy.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/envy.lua
icon.png: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/icon.png
language/english.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/language/english.lua
main.lua: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/main.lua
manifest.json: ReturnOfModding/plugins/ReturnsAPI-ReturnsAPI/manifest.json
