crates/loadsmith-loader/tests/snapshots/fixtures__RoRRModdingToolkit-RoRR_Modding_Toolkit@1.2.26.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
CHANGELOG.md: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/CHANGELOG.md
README.md: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/README.md
class/achievement.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/achievement.lua
class/actor.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/actor.lua
class/alarm.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/alarm.lua
class/array.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/array.lua
class/artifact.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/artifact.lua
class/attack_info.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/attack_info.lua
class/buff.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/buff.lua
class/color.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/color.lua
class/difficulty.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/difficulty.lua
class/elite.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/elite.lua
class/ending.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/ending.lua
class/environment_log.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/environment_log.lua
class/equipment.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/equipment.lua
class/gamemode.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/gamemode.lua
class/hit_info.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/hit_info.lua
class/initialize.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/initialize.lua
class/instance.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/instance.lua
class/interactable_card.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/interactable_card.lua
class/interactable_object.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/interactable_object.lua
class/item.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/item.lua
class/item_log.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/item_log.lua
class/language.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/language.lua
class/list.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/list.lua
class/message.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/message.lua
class/mod.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/mod.lua
class/monster_card.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/monster_card.lua
class/monster_log.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/monster_log.lua
class/net.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/net.lua
class/object.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/object.lua
class/packet.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/packet.lua
class/particle.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/particle.lua
class/player.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/player.lua
class/resources.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/resources.lua
class/skill.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/skill.lua
class/skin.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/skin.lua
class/stage.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/stage.lua
class/state.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/state.lua
class/survivor.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/survivor.lua
class/survivor_log.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class/survivor_log.lua
class_first/callback.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/callback.lua
class_first/callback_raw.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/callback_raw.lua
class_first/class.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/class.lua
class_first/global.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/global.lua
class_first/gm.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/gm.lua
class_first/helper.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/helper.lua
class_first/wrap.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/class_first/wrap.lua
envy_setup.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/envy_setup.lua
icon.png: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/icon.png
internal/capitalize.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal/capitalize.lua
internal/class_array.txt: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal/class_array.txt
internal/proxy.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal/proxy.lua
internal_last/actor_post.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal_last/actor_post.lua
internal_last/custom_object_sync_fix.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal_last/custom_object_sync_fix.lua
internal_last/mp_check.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal_last/mp_check.lua
internal_last/mp_lobby_diff_fix.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/internal_last/mp_lobby_diff_fix.lua
main.lua: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/main.lua
manifest.json: ReturnOfModding/plugins/RoRRModdingToolkit-RoRR_Modding_Toolkit/manifest.json
