crates/loadsmith-loader/tests/snapshots/fixtures__S2Mods-SpeedometerV2@2.0.3.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
README.md: ~
icon.png: ~
manifest.json: ~
mods/S2.SpeedometerV2/mod.json: R2Northstar/mods/S2.SpeedometerV2/mod.json
mods/S2.SpeedometerV2/mod/scripts/vscripts/s2_speedometer.nut: R2Northstar/mods/S2.SpeedometerV2/mod/scripts/vscripts/s2_speedometer.nut
