crates/loadsmith-loader/tests/snapshots/fixtures__Thunderstore-lovely@0.9.0.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
CHANGELOG.md: ~
README.md: ~
icon.png: ~
lovely/config.toml: mods/lovely/config.toml
manifest.json: ~
version.dll: "./version.dll"
