crates/loadsmith-loader/tests/snapshots/fixtures__Universal-MoreGuns@1.3.0.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
CHANGELOG.md: Mods/Universal-MoreGuns/CHANGELOG.md
MoreGunsMono.dll: Mods/Universal-MoreGuns/MoreGunsMono.dll
README.md: Mods/Universal-MoreGuns/README.md
icon.png: Mods/Universal-MoreGuns/icon.png
manifest.json: Mods/Universal-MoreGuns/manifest.json
